fix(lightbox): display video player and description without squishing

--- a/packages/styles/scss/components/lightbox-media-viewer/_lightbox-media-viewer.scss
+++ b/packages/styles/scss/components/lightbox-media-viewer/_lightbox-media-viewer.scss
@@ -25,12 +25,17 @@
       }
     }
 
+    .#{$prefix}--modal-container .#{$prefix}--modal-content {
+      padding-right: 0;
+    }
+
     .#{$prefix}--video-player {
       width: 100%;
     }
 
     &__container {
       display: flex;
+      width: 100%;
       padding-bottom: 0;
     }
 
@@ -39,34 +44,18 @@
 
       flex-direction: column;
       flex-wrap: nowrap;
+      width: 100%;
 
       @include carbon--breakpoint('lg') {
         flex-direction: row;
-        height: 100%;
       }
     }
     &__media {
-      @include carbon--breakpoint-down('lg') {
-        position: relative;
-        height: 100%;
-      }
-
       img {
         width: auto;
         max-width: 100%;
         height: auto;
         max-height: 100%;
-
-        @include carbon--breakpoint-down('lg') {
-          position: absolute;
-          margin: auto;
-          top: 0;
-          bottom: 0;
-        }
-
-        @include carbon--breakpoint('lg') {
-          height: 100%;
-        }
       }
 
       @include carbon--breakpoint-down('lg') {
